--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.54MB/s(Youtube:不良林), server: 36.134.154.119, port: 16224, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 116.129.253.230, port: 16119, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: 120.233.29.189, port: 16113, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.83MB/s(Youtube:不良林), server: 116.129.253.230, port: 16111, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.32MB/s(Youtube:不良林), server: 116.129.253.230, port: 16209, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-374.1KB/s(Youtube:不良林), server: 120.233.150.132, port: 16209, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.61MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: 36.134.154.119, port: 16115, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-262.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-562.0KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-482.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
   - {name: 🇳🇱 荷兰-359.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
   - {name: 🇳🇱 荷兰-831.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
