--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-374.1KB/s(Youtube:不良林), server: 120.233.150.132, port: 16209, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.61MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: 36.134.154.119, port: 16115, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-262.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-3.76MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20003, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-729.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇨🇳 中国-562.0KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-482.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
   - {name: 🇳🇱 荷兰-359.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
   - {name: 🇳🇱 荷兰-831.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇳🇱 荷兰-452.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-729.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-729.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-729.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-729.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-729.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-729.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-374.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1013.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-729.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
