--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-708.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇳🇱 荷兰-507.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇨🇳 中国-3.91MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.253.230, port: 16245, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-837.1KB/s(Youtube:不良林), server: scloud53.jafiyun.life, port: 22053, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud53.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-562.0KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-482.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇳🇱 荷兰-359.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇳🇱 荷兰-831.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇩🇪 德国-799.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-389.2KB/s(Youtube:不良林), server: scloud56.jafiyun.life, port: 22056, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud56.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.59MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-815.1KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.94MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20120, type: trojan, password: f788c9d5-2100-4378-b3b2-5e7ed9de9150, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-992.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 台湾-1.38MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.98MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-708.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-708.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-708.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-708.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-708.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-708.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-708.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-276.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
+      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
